# KOSA_Mini_Project_1

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  main  main.cpp  mytest  product.cpp  productManager.cpp  util.cpp  util.h  util.hpp
KOSA_MiniProject01_CustomerManagement/: KOSA_MiniProject01_CustomerManagement.sln
KOSA_MiniProject01_CustomerManagement/KOSA_MiniProject01_CustomerManagement/: KOSA_MiniProject01_CustomerManagement.cpp  KOSA_MiniProject01_CustomerManagement.vcxproj  KOSA_MiniProject01_CustomerManagement.vcxproj.filters
admin/: adminMenu.cpp  adminMenu.h  main copy.cpp  mainSub  mainSub.cpp  test  test.cpp
admin/temp/: mainSub.cpp  productManager.cpp
controller/: BaseController.cpp  BaseController.h  csvController.cpp  csvController.h  csvManager.cpp  csvManager.h  inventoryController.cpp  inventoryController.h  productController.cpp  productController.h  productManager.cpp  productManager.h  screenController.cpp  screenController.h  stockController.cpp  stockController.h  userController.cpp  userController.h
csv/: csvManager.cpp  csvManager.h
customer/: customerMenu.cpp  customerMenu.h
data/: CsvRepository.cpp  CsvRepository.h  csvRepository.h  inventory.csv  product.csv  user.csv
data/products/: products.csv
data/stocks/: stocks.csv
model/: csvRepository.h  inventory.cpp  inventory.h  product.cpp  product.h  productFactory.h  user.cpp  user.h
model/data/: inventory.csv  user.csv
model/product/: product.cpp  product.h
product/: product.cpp  product.h
test/: main.cpp  mytest
test/view/: viewSetting.cpp  viewSetting.h
utils/: validator.cpp
view/: adminMenu.cpp  adminMenu.h  baseScreenView.cpp  baseScreenView.h  menuView.cpp  menuView.h  viewRender.cpp  viewRender.h
view/detailMenuView/: MenuViewRenderer.hpp  MenuViewSettings.hpp  example.cpp
view/screens/: AdminInventoryAddView.cpp  AdminInventoryAddView.h  AdminInventoryListView.cpp  AdminInventoryListView.h  AdminInventoryManagementView.cpp  AdminInventoryManagementView.h  (+55 more)
(+34 files in other folders)
